--- a/careerpath_project/vercel.json
+++ b/careerpath_project/vercel.json
@@ -1,8 +1,8 @@
 {
   "rewrites": [
     {
-      "source": "/api/(.*)",
-      "destination": "/main.py"
+      "source": "/api/:path*",
+      "destination": "https://jri-uz4s.onrender.com/:path*"
     }
   ]
 }
